# ufm

./: .gitignore  Cargo.toml  DESIGN.md  PROJECT.md  Project.md  README.md  Skills.md  build.bat  build.rs  build.sh  ufm.debug.toml  ufm.example.toml
.github/workflows/: build.yml
docs/: UFM_DESIGN_ADDENDUM.md
src/: archive.rs  crawler.rs  lib.rs  main.rs  mcp.rs  operations.rs  platform.rs  security.rs  tools.rs  update.rs
src/network/: config.rs  discovery.rs  identity.rs  mod.rs  monitor.rs  peer.rs  protocol.rs  router.rs  tailscale.rs  transfer.rs
